[workspace]

members = [
    "lib"
]

[package]
name = "mprobe-cli"
version = "0.1.0"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
edition = "2021"
license = "MIT"
repository = "https://github.com/nelusnegur/mprobe"
readme = "README.md"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
mprobe = { path = "./lib", version = "0.1.0" }
