[workspace]

members = [
    "crates/diagnostics",
    "crates/mprobe"
]

[package]
name = "mprobe-cli"
version = "0.1.0"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe"
keywords = [ "mongodb", "diagnostics", "ftdc" ]
categories = ["command-line-utilities", "text-processing"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]

[dependencies]
mprobe = { path = "./crates/mprobe", version = "0.1.0" }
clap = { version = "3.1.9", features = ["derive"] }
