[package]
name = "mprobe"
version = "0.1.0"
edition = "2021"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nelusnegur/mprobe"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE-*",
]

[dependencies]
chrono = "0.4.19"
bson = "2.2.0"
base64 = "0.13.0"
flate2 = "1.0.23"
