[package]
name = "mprobe-cli"
version = "0.1.0"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/crates/cli"
keywords = [ "mongodb", "diagnostics", "ftdc" ]
categories = ["command-line-utilities", "text-processing"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]

[dependencies]
mprobe = { path = "../mprobe", version = "0.1.0" }
clap = { version = "4.5.28", features = ["derive"] }

chrono = { version = "0.4.38", features = ["serde"]}
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
digest_auth = "0.3.1"
