[package]
name = "mprobe"
version = "0.1.0"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/tree/main/crates/cli"
keywords = [ "diagnostics", "ftdc", "mongodb", "visualization" ]
description = "A CLI for fetching and visualizing MongoDB diagnostic data"
categories = ["command-line-utilities", "database", "visualization"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]

[dependencies]
mprobe-diagnostics = { version = "0.1.1" }
mprobe-vis = { path = "../vis", version = "0.1.0" }

clap = { version = "4.5.28", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"]}
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
digest_auth = "0.3.1"
