[package]
name = "mprobe-diagnostics"
version = "0.1.0"
edition = "2024"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
keywords = [ "mongodb", "diagnostics", "ftdc", "metrics" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/crates/diagnostics"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]

[dependencies]
chrono = "0.4.38"
bson = { version = "2.13.0", features = [ "chrono-0_4" ] }
flate2 = "1.0.35"
