[package]
name = "mprobe-diagnostics"
version = "0.1.1"
edition = "2024"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
keywords = [ "ftdc", "mongodb", "diagnostics", "metrics" ]
description = "A library for parsing and reading MongoDB FTDC metrics"
categories = ["database", "encoding"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/tree/main/crates/diagnostics"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]

[dependencies]
chrono = "0.4.38"
bson = { version = "3.1.0", features = [ "serde", "chrono-0_4" ] }
rust_decimal = "1.41"
flate2 = "1.1.2"
