[package]
name = "mprobe"
version = "0.1.0"
edition = "2021"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
keywords = [ "mongodb", "diagnostics", "ftdc" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/crates/mprobe"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]

[dependencies]
mprobe-diagnostics = { version = "0.1.0", path = "../diagnostics" }
mprobe-vis = { version = "0.1.0", path = "../vis" }
