[package]
name = "neovue"
version = "0.1.0"
edition = "2021"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
keywords = [ "visualization", "charts"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/crates/neovue"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]

[dependencies]
serde = { verson = "1.0.160", feature = [ "derive" ] }
serde_json = "1.0.96"
