[package]
name = "mprobe-vis"
version = "0.1.0"
edition = "2024"
authors = [ "Nelu Snegur <nelu@pulsarplanet.com>" ]
keywords = [ "visualization", "ftdc", "mongodb" ]
description = "A library for visualizing MongoDB FTDC metrics"
categories = ["visualization", "database"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nelusnegur/mprobe/crates/vis"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE",
]

[dependencies]
chrono = "0.4.38"
mprobe-diagnostics = { version = "0.1.0", path = "../diagnostics" }

serde = { version = "1.0.160", features = [ "derive", "rc" ] }
serde_json = "1.0.96"

tinytemplate = "1.2.1"
